lexer/tests/snapshots/basic__tests__edge_cases-7.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"!!!\")"
---
Ok(
    [
        Bang,
        Bang,
        Bang,
    ],
)
