lexer/tests/snapshots/basic__tests__edge_cases-8.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"...\")"
---
Ok(
    [
        Dot,
        Dot,
        Dot,
    ],
)
