lexer/tests/snapshots/basic__tests__edge_cases-9.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\",,,\")"
---
Ok(
    [
        Comma,
        Comma,
        Comma,
    ],
)
