lexer/tests/snapshots/basic__tests__literal_tokens-2.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"world\")"
---
Ok(
    [
        Litteral(
            "world",
        ),
    ],
)
