lexer/tests/snapshots/basic__tests__literal_tokens-3.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"foo bar\")"
---
Ok(
    [
        Litteral(
            "foo",
        ),
        Space,
        Litteral(
            "bar",
        ),
    ],
)
