lexer/tests/snapshots/basic__tests__literal_tokens.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"hello\")"
---
Ok(
    [
        Litteral(
            "hello",
        ),
    ],
)
