lexer/tests/snapshots/basic__tests__mixed_tokens-2.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"const const x = 10 + 20!\")"
---
Ok(
    [
        Litteral(
            "const",
        ),
        Space,
        Litteral(
            "const",
        ),
        Space,
        Litteral(
            "x",
        ),
        Space,
        Equal,
        Space,
        Numeric(
            [
                1,
                0,
            ],
        ),
        Space,
        Plus,
        Space,
        Numeric(
            [
                2,
                0,
            ],
        ),
        Bang,
    ],
)
