lexer/tests/snapshots/basic__tests__mixed_tokens.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"const var scores = [3, 2, 5]!\")"
---
Ok(
    [
        Litteral(
            "const",
        ),
        Space,
        Litteral(
            "var",
        ),
        Space,
        Litteral(
            "scores",
        ),
        Space,
        Equal,
        Space,
        OpenBracket,
        Numeric(
            [
                3,
            ],
        ),
        Comma,
        Space,
        Numeric(
            [
                2,
            ],
        ),
        Comma,
        Space,
        Numeric(
            [
                5,
            ],
        ),
        CloseBracket,
        Bang,
    ],
)
