lexer/tests/snapshots/basic__tests__numeric_tokens-2.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"4567\")"
---
Ok(
    [
        Numeric(
            [
                4,
                5,
                6,
                7,
            ],
        ),
    ],
)
