lexer/tests/snapshots/basic__tests__numeric_tokens-3.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"0\")"
---
Ok(
    [
        Numeric(
            [
                0,
            ],
        ),
    ],
)
