lexer/tests/snapshots/basic__tests__numeric_tokens.snap
---
source: lexer/tests/basic.rs
expression: "scan_one(\"123\")"
---
Ok(
    [
        Numeric(
            [
                1,
                2,
                3,
            ],
        ),
    ],
)
